<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_edit_trail"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit_trail"/>
    
    <item
        android:id="@+id/action_new_chase"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_play"
        android:title="@string/action_new_chase"/>

    <item
        android:id="@+id/action_share_trail"
        android:showAsAction="ifRoom"
        android:orderInCategory="30"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share_trail">
    </item>

     <item
        android:id="@+id/action_delete_trail"
        android:orderInCategory="40"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete_trail"/>  
           
</menu>
